task1-harden/manifests/60-neighbour.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reporting
  namespace: payments
  labels:
    app: reporting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reporting
  template:
    metadata:
      labels:
        app: reporting
    spec:
      serviceAccountName: reporting
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 100
        runAsGroup: 100
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: client
          image: curlimages/curl:8.8.0
          command: ["sleep", "infinity"]
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 100
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: "10m"
              memory: "16Mi"
            limits:
              cpu: "50m"
              memory: "32Mi"
          livenessProbe:
            exec:
              command: ["true"]
            periodSeconds: 30
          readinessProbe:
            exec:
              command: ["true"]
            periodSeconds: 30
